test/fail_compilation/protattr2.d
/*
TEST_OUTPUT:
---
Error: attribute __anonymous 'subpkg2' is not one of ancestor packages of module 'protection.subpkg.test2'
---
*/
import protection.subpkg.test2;
